--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,3 +149,14 @@ header nav > a.active {
     font-family: var(--lato-regular);
     color: rgba(var(--dark-color), 1);
 }
+
+section.benefit .title {
+    color: rgba(var(--primary-color), 1);
+    font-size: 2.125rem;
+    margin-bottom: 42px;
+}
+
+section.benefit .paragraph {
+    color: rgba(var(--dark-color), 1);
+    font-family: var(--lato-regular);
+}
